# 3iotBox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.org  config.example.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
.cmake/: LibPackage.cmake  config.mk
lib/rM2M/: core.inc  crypt.inc  default.inc  filetransfer.inc  float.inc  helpers.inc  rM2M.inc  string.inc
lib/rM2M/sdk/: iotbox.inc  ui.inc
src/: CMakeLists.txt  display.inc  display.p  test.m2m  test.p
src/html/: index.html
src/js/: 3iotBox.js
src/pawn/: CMakeLists.txt  display.p  logic.footer.m2m  logic.header.m2m  logic.m2m  logic.p  run.sh  test.m2m
src/ts/: 3iotBox.ts  client.ts  service.ts
